[CockroachDB] Added infra set-up scripts and basic folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 cassandra/project-files/
+certs*
+cockroachdb/infrastructure/bin
+cockroachdb/infrastructure/keys
+cockroachdb/infrastructure/server_ssh
+
+__pycache__
+.DS_Store
