--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ peewee = "==3.13.3"
 psycopg2 = "==2.8.6"
 
 [requires]
-python_version = "3.8"
+python_version = ">=3.7"
 
 [pipenv]
 allow_prereleases = true
