--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,10 @@ pre-commit = "==2.7.1"
 [packages]
 peewee = "==3.13.3"
 psycopg2 = "==2.8.6"
+rich = "==9.0.1"
 
 [requires]
-python_version = "3.8"
+python_version = ">=3.8"
 
 [pipenv]
 allow_prereleases = true
